# Blockchain-and-TEE

./: mycert2.pem
PythonSSLServer/: cert.pem  key.pem  server.py
SimpleWalletPython/: simplewallet-build-tp-py.yaml
SimpleWalletPython/pyclient/wallet/: simplewallet_cli.py  simplewallet_client.py
SimpleWalletPython/pyprocessor/processor/: simplewallet_tp.py
enclave_tls/: CMakeLists.txt  Makefile
enclave_tls/client/: Makefile
enclave_tls/client/enc/: cert_verifier.cpp  client.cpp  ecalls.cpp  tls_client_args.h  tls_client_enclave  tls_client_enclave.signed  tls_client_t.c  tls_client_t.h
enclave_tls/client/host/: CMakeLists.txt  host.cpp  tls_client_host  tls_client_u.c  tls_client_u.h
enclave_tls/common/: common.h  tls_server_enc_mrenclave.h
